<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">VertiBand</string>

    <!--  LoginActivity -->
    <string name="welcome">欢迎使用</string>
    <string name="enter_phone_number">请输入您的手机号码…</string>
    <string name="enter_code">请输入验证码…</string>
    <string name="get_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="policy">登录代表您已阅读和同意《志听隐私政策》</string>


    <!--  MainActivity -->
    <string name="title_home">主页</string>
    <string name="title_control">控制中心</string>
    <string name="title_sessions">个性化方案</string>
    <string name="title_info">个人中心</string>
    <!-- 提示框 -->
    <string name="connection_failed">连接失败，请确定设备已打开</string>
    <string name="bt_is_off">手机蓝牙未打开，请打开后重试</string>

    <!--  HomeFragment -->
    <string name="device_management">设备管理</string>
    <string name="add_device">添加设备</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="add_new_device">添加新的设备</string>

    <!--  ControlFragment -->
    <string name="visual_target">投屏</string>
    <string name="control_focus">注视</string>
    <string name="control_shake">反向追踪</string>
    <string name="control_gaze">凝视</string>
    <string name="smooth_pursuit">追踪</string>
    <string name="saccades">扫视</string>
    <string name="control_video">视频</string>
    <string name="control_settings">设置</string>
    <string name="control_current_value">当前值：</string>
    <string name="control_alert_cancel">取消</string>
    <string name="control_alert_ok">确定</string>
    <string name="control_speed">速度</string>
    <string name="control_frequency">频率</string>
    <string name="control_gain">增益</string>
    <string name="control_alert_click">请关闭当前的控制开关，再进行新的操作</string>


    <!--  InfoFragment -->
    <string name="training_target">训练目标</string>
    <string name="train_time">训练次数</string>
    <string name="shopping_link">商城链接</string>
    <string name="setting">设置</string>


    <!--  SettingActivity -->
    <string name="param_setting">模式设置</string>
    <string name="tv_setting">视靶设置</string>
    <string name="unbind_device">解绑设备</string>
    <string name="switch_lang">切换语言</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="mode_select">模式选择</string>
    <string name="laser_mode">激光靶点</string>
    <string name="tv_mode">电视投靶</string>

    <!--  提示框  -->
    <string name="sure_to_logout">您确定要退出登录吗？</string>
    <string name="sure_to_unbind">是否确定解绑设备？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="unbind_info">设备已解绑</string>


    <!--  AddEquipmentActivity -->
    <string name="tips">开启头戴仪\n输入设备的SN号</string>
    <string name="enter_sn">请输入您的SN号…</string>
    <string name="tips1">| 提示</string>
    <string name="tips1_text">设备的SN号在设备的xxxx处</string>
    <string name="add">添加</string>

    <!--  提示框  -->
    <string name="scan_device">正在扫描设备…</string>
    <string name="no_gps">检测到您未开启位置服务</string>
    <string name="turn_on">去打开</string>
    <string name="can_not_find_device">搜索不到设备，请确保设备打开后重试</string>
    <string name="ok">好的</string>
    <string name="connect_device">正在连接设备…</string>
    <string name="tip">提示</string>
    <string name="connection_succeeded">连接成功</string>
    <string name="wrong_SN">输入的SN码有误，请核对后重试</string>
    <string name="try_again">重试</string>


    <!--  ParamActivity  -->
    <string name="frequency">频率</string>
    <string name="amplitude">幅度</string>
    <string name="calibration">校准</string>
    <string name="calibration_value">校准值</string>
    <string name="gain">增益</string>
    <string name="gain_value">增益</string>


    <!--  AboutActivity  -->
    <string name="version">版本号 V1.0.0</string>
    <string name="contact_us">联系我们</string>

    <!--    Sessions Fragment           -->
    <string name="sessions">个性化方案</string>
    <string name="id">编号</string>
    <string name="date">日期</string>
    <string name="score">得分</string>
    <string name="delete">删除</string>
    <string name="chart">图表</string>
    <string name="reperform">重做</string>
    <string name="alert_add_data">请添加自定义方案</string>

    <!--    Task Activity   -->
    <string name="task">任务</string>
    <string name="total_score">总分:</string>
    <string name="task_toast_alert">设备正在运行中，请在动作停止后观看视频</string>

    <!--    Task Activity   -->
    <string name="remaining_time">剩余时间:</string>
    <string name="variant">难度</string>

    <!--    Chart Activity  -->
    <string name="title_chart">图表</string>

    <string name="title_activity_tvmode">TVModeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TVSettings Activity  -->
    <string name="tv_width">屏幕宽度：</string>
    <string name="tv_height">屏幕高度：</string>
    <string name="distance">与屏幕之间的距离：</string>
    <string name="unit">(cm)</string>
    <string name="save">保 存</string>
    <string name="toast_text">保存成功</string>



</resources>
