<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TVSettingsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/back"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            android:text="@string/param_setting"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_login"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginStart="27.5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="27.5dp"
        android:layout_marginBottom="0dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zehnit_logo"
            android:layout_marginTop="37dp"
            android:layout_marginStart="22.5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140.5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/tv_width"
                android:layout_marginStart="30dp"/>

            <EditText
                android:id="@+id/text_tv_width"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="110"
                android:inputType="number"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="194dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_height"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginStart="30dp"/>

            <EditText
                android:id="@+id/text_tv_height"
                android:layout_width="150dp"
                android:hint="63"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="248dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginStart="30dp"/>

            <EditText
                android:id="@+id/text_distance"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:hint="100"
                android:inputType="number"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit" />
        </LinearLayout>


        <Button
            android:id="@+id/button_save"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="340dp"
            android:background="@animator/round_button"
            android:text="@string/save"
            android:textSize="16sp"
            android:textColor="@color/white"/>



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>