<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:background="@color/white">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            android:text="@string/title_sessions"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/id"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/date"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/score"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>
<!--
        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_sessions"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
-->
        <ListView
            android:id="@+id/lvsessions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/ivdelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_delete" />

            <TextView
                android:id="@+id/tvdelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorBlueGray"
                android:text="@string/delete"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_chart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/btchart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_chart_click" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorDarkGray"
                android:text="@string/chart"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/btadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_increase_click" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/colorDarkGray"
                android:textSize="17sp" />
        </LinearLayout>






    </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>